[gd_scene load_steps=3 format=3 uid="uid://bpts37ysapt87"]

[ext_resource type="Script" uid="uid://cr0bc8etiv8eu" path="res://control/control_richtextlabel_size.gd" id="1_mk07v"]
[ext_resource type="PackedScene" uid="uid://bj2i1q1ilr6ld" path="res://addons/godot_play_tool/helper/helper_move2center.tscn" id="2_7rurs"]

[node name="ControlRichtextlabel_Size" type="Node2D"]
script = ExtResource("1_mk07v")

[node name="RichTextLabel" type="RichTextLabel" parent="."]
offset_left = 397.0
offset_top = 168.0
offset_right = 397.0
offset_bottom = 168.0
fit_content = true
autowrap_mode = 0

[node name="helper_move2center" parent="RichTextLabel" instance=ExtResource("2_7rurs")]

[node name="Label" type="Label" parent="."]
offset_top = 602.0
offset_right = 1280.0
offset_bottom = 719.0
theme_override_colors/font_color = Color(0, 1, 0, 1)
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="minimum_size_changed" from="RichTextLabel" to="." method="_on_rich_text_label_minimum_size_changed"]
